<resources>
    <string name="app_name">Tmdb Mvvm</string>
    <string name="the_very_best_of_johnny_depp">The Very Best Of Johnny Depp</string>
    <string name="likes">Likes</string>
    <string name="like_amount">1.2K</string>
    <string name="vote_average">8.8</string>
    <string name="vote_average_hard_coded">Vote Average</string>
    <string name="batman_forever_and_robin">Batman Forever and Robin</string>
    <string name="_2016">2016</string>
    <string name="a_o_aventura_fantasia">Ação, Aventura, Fantasia</string>
</resources>